--- a/pom.xml
+++ b/pom.xml
@@ -7,8 +7,7 @@
 <name>maven-web-application</name>
 <description>Maven Web Project for Java Project</description>
 <organization>
-<name>Mithun Technologies</name>
-<url>http://mithuntechnologies.com/</url>
+<name>MBU Technologies</name>
 </organization>
 <properties>
 <jdk.version>1.8</jdk.version>
