--- a/pom.xml
+++ b/pom.xml
@@ -14,11 +14,11 @@
 <spring.version>5.1.2.RELEASE</spring.version>
 <junit.version>4.11</junit.version>
 <log4j.version>1.2.17</log4j.version>
-<sonar.host.url>http://15.206.69.51:9000/</sonar.host.url>
+<!--<sonar.host.url>http://15.206.69.51:9000/</sonar.host.url>
 <sonar.login>admin</sonar.login>
 <sonar.password>admin</sonar.password>
 <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>-->
 </properties>
 <dependencies>
 <dependency>
@@ -77,12 +77,12 @@
 <distributionManagement>
 <repository>
 <id>nexus</id>
-<name>Mithun Technologies Releases Nexus Repository</name>
+<name>MBU Technologies Releases Nexus Repository</name>
 <url>http://13.235.103.28:8081/repository/flipkart-releases/</url>
 </repository>
 <snapshotRepository>
 <id>nexus</id>
-<name>Mithun Technologies Snapshot Nexus Repository </name>
+<name>MBU Technologies Snapshot Nexus Repository </name>
 <url>http://13.235.103.28:8081/repository/flipkart-snapshot/</url>
 </snapshotRepository>
 </distributionManagement>
